[tool.poetry]
name = "sergen"
version = "0.1.0"
description = "Tool for generating gateway server environments"
authors = ["KOSTYAN <UNORDERED_SET@TUTANOTA.COM>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
